Bug 387414. Detect situations where the textrun doesn't map enough text to fully reflow the frame (which can happen during style changes to preformatted whitespace, for example) and rebuild textruns in that case. r=smontagu